--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,6 +2,7 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Developers/AaronPetrek/Collections/Maps/DevMap.DevMap
+EditorStartupMap=/Game/NotStarfox/Maps/EditorStartup.EditorStartup
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
