--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Developers/AaronPetrek/Collections/Maps/DevMap.DevMap
+GameDefaultMap=/Game/Developers/AaronPetrek/Collections/Maps/2DTestLevel.2DTestLevel
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
