Added cliff to cliff spline tool, spacing to mesh alignment

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Developers/AaronPetrek/Collections/Maps/DevMap.DevMap
+GameDefaultMap=/Game/NotStarfox/Maps/BaseLevel.BaseLevel
 EditorStartupMap=/Game/NotStarfox/Maps/EditorStartup.EditorStartup
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
