--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/NotStarfox/Maps/BaseLevel.BaseLevel
 EditorStartupMap=/Game/NotStarfox/Maps/EditorStartup.EditorStartup
+GameInstanceClass=/Game/NotStarfox/Blueprints/Core/BP_GameInstance.BP_GameInstance_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
