Transition from arcade to 3D game working

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -100,12 +100,13 @@ bSkipMovies=False
 +MapsToCook=(FilePath="/Game/Developers/AaronPetrek/Collections/Maps/DevMap")
 +MapsToCook=(FilePath="/Game/Developers/AaronPetrek/Collections/Maps/2DTestLevel")
 +MapsToCook=(FilePath="/Game/NotStarfox/Maps/BaseLevel")
++MapsToCook=(FilePath="/Game/NotStarfox/Maps/MainMenu")
 +DirectoriesToAlwaysCook=(Path="/Interchange/Functions")
 +DirectoriesToAlwaysCook=(Path="/Interchange/gltf")
 +DirectoriesToAlwaysCook=(Path="/Interchange/Materials")
 +DirectoriesToAlwaysCook=(Path="/Interchange/Pipelines")
 +DirectoriesToAlwaysCook=(Path="/Interchange/Utilities")
-PerPlatformBuildConfig=()
+PerPlatformBuildConfig=(("Windows", PPBC_Development))
 PerPlatformTargetFlavorName=(("Android", "Android_ASTC"))
 PerPlatformBuildTarget=()
 
