--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -48,6 +48,7 @@ r.ReflectionMethod=1
 r.Shadow.Virtual.Enable=1
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.Nanite.ProjectEnabled=False
+r.Nanite = 0
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
